Print release targets

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,3 +12,4 @@ jobs:
             toolchain: stable
             components: rustfmt
       - run: ./scripts/pre-commit
+      - run: ls targets/release
