--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,4 +16,4 @@ jobs:
             toolchain: stable
             components: rustfmt
       - run: ./scripts/pre-commit
-      - run: ls targets/release
+      - run: ls target/release
