--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,12 +3,8 @@ on: [push]
 name: test
 
 jobs:
-  test:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, macos-latest]
-    runs-on: ${{ matrix.os }}
+  test-linux:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2  # for example testing
@@ -18,6 +14,28 @@ jobs:
             components: rustfmt
       - run: ./scripts/pre-commit
       - run: ls target/release
+      - uses: actions/upload-artifact@v2
+        with:
+          name: libcls_ffi.so
+          path: target/release/libcls_ffi.so
+          if-no-files-found: error
+          
+  test-macos:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2  # for example testing
+      - uses: actions-rs/toolchain@v1
+        with:
+            toolchain: stable
+            components: rustfmt
+      - run: ./scripts/pre-commit
+      - run: ls target/release
+      - uses: actions/upload-artifact@v2
+        with:
+          name: libcls_ffi.dylib
+          path: target/release/libcls_ffi.dylib
+          if-no-files-found: error
 
   test-windows:
     runs-on: windows-latest
@@ -32,3 +50,30 @@ jobs:
           cargo build --release
           python3 ffi_examples\python.py
           ls target\release
+      - uses: actions/upload-artifact@v2
+        with:
+          name: cls_ffi.dll
+          path: target\release\cls_ffi.dll
+          if-no-files-found: error
+          
+  create-release:
+    needs: [test-linux, test-macos, test-windows]
+    runs-on: ubuntu-latest
+    if: startsWith(github.ref, 'refs/tags/v')
+    steps:
+      - run: mkdir artifacts
+      - uses: actions/download-artifact@v2
+        with:
+          name: libcls_ffi.so
+          path: artifacts/libcls_ffi.so
+      - uses: actions/download-artifact@v2
+        with:
+          name: libcls_ffi.dylib
+          path: artifacts/libcls_ffi.dylib
+      - uses: actions/download-artifact@v2
+        with:
+          name: cls_ffi.dll
+          path: artifacts/cls_ffi.dll
+      - run: |
+          gh release create ${{ github.ref }}
+          gh release upload --clobber artifacts/*
