--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ jobs:
         with:
             toolchain: stable
             components: rustfmt
+      - uses: Swatinem/rust-cache@v1
       - run: ./scripts/pre-commit
       - run: ls target/release
       - uses: actions/upload-artifact@v2
@@ -29,6 +30,7 @@ jobs:
         with:
             toolchain: stable
             components: rustfmt
+      - uses: Swatinem/rust-cache@v1
       - run: ./scripts/pre-commit
       - run: ls target/release
       - uses: actions/upload-artifact@v2
@@ -46,6 +48,7 @@ jobs:
         with:
             toolchain: stable
             components: rustfmt
+      - uses: Swatinem/rust-cache@v1
       - run: |
           cargo build --release
           python3 ffi_examples\python.py
@@ -61,7 +64,7 @@ jobs:
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/v')
     steps:
-      - run: actions/checkout@v2
+      - uses: actions/checkout@v2
       - run: mkdir artifacts
       - uses: actions/download-artifact@v2
         with:
