Build linux aarch64

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,12 +13,20 @@ jobs:
             toolchain: stable
             components: rustfmt
       - uses: Swatinem/rust-cache@v1
+      # x86_64
       - run: ./scripts/pre-commit
       - run: ls target/release
       - uses: actions/upload-artifact@v2
         with:
           name: libcls_ffi.so
           path: target/release/libcls_ffi.so
+          if-no-files-found: error
+      # aarch64
+      - run: cargo build --release --target aarch64-unknown-linux-gnu
+      - uses: actions/upload-artifact@v2
+        with:
+          name: libcls_ffi_aarch64.so
+          path: target/release/libcls_ffi_aarch64.so
           if-no-files-found: error
 
   macos:
@@ -69,6 +77,10 @@ jobs:
       - uses: actions/download-artifact@v2
         with:
           name: libcls_ffi.so
+          path: artifacts
+      - uses: actions/download-artifact@v2
+        with:
+          name: libcls_ffi_aarch64.so
           path: artifacts
       - uses: actions/download-artifact@v2
         with:
