--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,7 +22,9 @@ jobs:
           path: target/release/libcls_ffi.so
           if-no-files-found: error
       # aarch64
-      - run: cargo build --release --target aarch64-unknown-linux-gnu
+      - run: |
+          rustup target add aarch64-unknown-linux-gnu
+          cargo build --release --target aarch64-unknown-linux-gnu
       - uses: actions/upload-artifact@v2
         with:
           name: libcls_ffi_aarch64.so
