--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,8 +14,9 @@ jobs:
             components: rustfmt
       - uses: Swatinem/rust-cache@v1
       # x86_64
-      - run: ./scripts/pre-commit
-      - run: ls target/release
+      - run: |
+          ./scripts/pre-commit
+          ls target/release
       - uses: actions/upload-artifact@v2
         with:
           name: libcls_ffi.so
@@ -23,12 +24,14 @@ jobs:
           if-no-files-found: error
       # aarch64
       - run: |
+          apt-get install libssl-dev
           rustup target add aarch64-unknown-linux-gnu
           cargo build --release --target aarch64-unknown-linux-gnu
+          ls target/release
       - uses: actions/upload-artifact@v2
         with:
           name: libcls_ffi_aarch64.so
-          path: target/release/libcls_ffi_aarch64.so
+          path: target/release/libcls_ffi.so
           if-no-files-found: error
 
   macos:
@@ -41,8 +44,9 @@ jobs:
             toolchain: stable
             components: rustfmt
       - uses: Swatinem/rust-cache@v1
-      - run: ./scripts/pre-commit
-      - run: ls target/release
+      - run: |
+          ./scripts/pre-commit
+          ls target/release
       - uses: actions/upload-artifact@v2
         with:
           name: libcls_ffi.dylib
