--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,7 +24,7 @@ jobs:
           if-no-files-found: error
       # aarch64
       - run: |
-          sudo apt-get install libssl-dev
+          sudo apt-get install gcc-aarch64-linux-gnu
           rustup target add aarch64-unknown-linux-gnu
           cargo build --release --target aarch64-unknown-linux-gnu
           ls target/release
