--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,8 @@ jobs:
           if-no-files-found: error
       # aarch64
       - run: |
-          sudo apt-get install gcc-aarch64-linux-gnu
-          rustup target add aarch64-unknown-linux-gnu
-          cargo build --release --target aarch64-unknown-linux-gnu
+          cargo install cross
+          cross build --release --target aarch64-unknown-linux-gnu
           ls target/release
       - uses: actions/upload-artifact@v2
         with:
