--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
       # aarch64
       - run: |
           cargo install cross
+          rm -r target
           cross build --release --target aarch64-unknown-linux-gnu
           ls target/release
       - uses: actions/upload-artifact@v2
