--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - run: |
           cargo install cross
           rm -r target
-          cross build --release --target aarch64-unknown-linux-gnu
+          cross build --target aarch64-unknown-linux-gnu --release
           ls target/release
       - uses: actions/upload-artifact@v2
         with:
