--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,9 +24,9 @@ jobs:
           if-no-files-found: error
       # aarch64
       - run: |
-          cargo install cross
+          sudo apt-get install gcc-aarch64-linux-gnu
           rm -r target
-          cross build --target aarch64-unknown-linux-gnu --release
+          cargo build --release --target aarch64-unknown-linux-gnu
           ls target/release
       - uses: actions/upload-artifact@v2
         with:
