--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
       # aarch64
       - run: |
           sudo apt-get install gcc-aarch64-linux-gnu
+          rustup target add aarch64-unknown-linux-gnu
           rm -r target
           cargo build --release --target aarch64-unknown-linux-gnu
           ls target/release
