--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,11 +28,11 @@ jobs:
           rm -r target
           cross build --release --target aarch64-unknown-linux-gnu
           ls target/release -alh
-          ls target -alh
+          ls target/aarch64-unknown-linux-gnu/release -alh
       - uses: actions/upload-artifact@v2
         with:
           name: libcls_ffi_aarch64.so
-          path: target/release/libcls_ffi.so
+          path: target/aarch64-unknown-linux-gnu/release/libcls_ffi.so
           if-no-files-found: error
   macos:
     runs-on: macos-latest
