--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,27 @@ jobs:
             toolchain: stable
             components: rustfmt
       - uses: Swatinem/rust-cache@v1
-      - run: ./scripts/pre-commit
-      - run: ls target/release
+      # x86_64
+      - run: |
+          ./scripts/pre-commit
+          ls target/release
       - uses: actions/upload-artifact@v2
         with:
           name: libcls_ffi.so
           path: target/release/libcls_ffi.so
           if-no-files-found: error
-
+      # aarch64
+      - run: |
+          cargo install cross
+          rm -r target
+          cross build --release --target aarch64-unknown-linux-gnu
+          ls target/release -alh
+          ls target/aarch64-unknown-linux-gnu/release -alh
+      - uses: actions/upload-artifact@v2
+        with:
+          name: libcls_ffi_aarch64.so
+          path: target/aarch64-unknown-linux-gnu/release/libcls_ffi.so
+          if-no-files-found: error
   macos:
     runs-on: macos-latest
     steps:
@@ -31,8 +44,9 @@ jobs:
             toolchain: stable
             components: rustfmt
       - uses: Swatinem/rust-cache@v1
-      - run: ./scripts/pre-commit
-      - run: ls target/release
+      - run: |
+          ./scripts/pre-commit
+          ls target/release
       - uses: actions/upload-artifact@v2
         with:
           name: libcls_ffi.dylib
@@ -70,6 +84,10 @@ jobs:
           path: artifacts
       - uses: actions/download-artifact@v2
         with:
+          name: libcls_ffi_aarch64.so
+          path: artifacts
+      - uses: actions/download-artifact@v2
+        with:
           name: libcls_ffi.dylib
           path: artifacts
       - uses: actions/download-artifact@v2
@@ -81,9 +99,10 @@ jobs:
         run: curl https://raw.githubusercontent.com/dropseed/commitstat/master/install.sh | bash -s -- -b $HOME/bin
       - name: Run commitstat
         run: |
-          stat --format %s artifacts/libcls_ffi.so    | $HOME/bin/commitstat - --name libcls_ffi.so
-          stat --format %s artifacts/libcls_ffi.dylib | $HOME/bin/commitstat - --name libcls_ffi.dylib
-          stat --format %s artifacts/cls_ffi.dll      | $HOME/bin/commitstat - --name cls_ffi.dll
+          stat --format %s artifacts/libcls_ffi.so            | $HOME/bin/commitstat - --name libcls_ffi.so
+          stat --format %s artifacts/libcls_ffi_aarch64.so    | $HOME/bin/commitstat - --name libcls_ffi_aarch64.so
+          stat --format %s artifacts/libcls_ffi.dylib         | $HOME/bin/commitstat - --name libcls_ffi.dylib
+          stat --format %s artifacts/cls_ffi.dll              | $HOME/bin/commitstat - --name cls_ffi.dll
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           
