--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,5 +21,7 @@ dirs = "3.0.2"
 dialoguer = "0.8.0"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 serde = { version = "1.0", features = ["derive"] }
+ctrlc = "3.2.0"
+atty = "0.2"
 # Have to vendor openssl to cross-compile right now (linux aarch64)
 openssl = { version = '0.10', features = ["vendored"] }
