--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,5 +23,6 @@ uuid = { version = "0.8", features = ["serde", "v4"] }
 serde = { version = "1.0", features = ["derive"] }
 ctrlc = "3.2.0"
 atty = "0.2"
+colored = "2.0.0"
 # Have to vendor openssl to cross-compile right now (linux aarch64)
 openssl = { version = '0.10', features = ["vendored"] }
